<resources>
    <string name="app_name">S Bank</string>
    <string name="app_logo">S.</string>
    <string name="intro_steps_def">First of the few steps to set you up with a Bank Account</string>
    <string name="pan_number_title">PAN NUMBER</string>
    <string name="birthdate_title">BIRTHDATE</string>
    <string name="disclaimer">Providing PAN &amp; Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. Learn more.</string>
    <string name="learn_more_link_text">Learn more</string>
    <string name="non_pan_member_link_text">I don\'t have a PAN</string>
    <string name="hint_year">YYYY</string>
    <string name="hint_month">MM</string>
    <string name="hint_day">DD</string>
    <string name="btn_next_text">NEXT</string>
    <string name="hin_pan_format">ABCDE1234F</string>
    <string name="no_pan_exit_conformation">"Without PAN number, we can't proceed with the registration process. Are you sure you want to quit the app?"</string>
    <string name="registration_success">"Your registration was successful. Do you want to continue using the app?"</string>
    <string name="alert_dialog_positive">Yes</string>
    <string name="alert_dialog_negative">No</string>
    <string name="_error_invalid_month">Month cannot be less than 1 or greater than 12</string>
    <string name="error_invalid_day">Date cannot be less than 1 or greater than 31</string>
</resources>